# vivarium

./: .gitignore  2.0  config.ini  coreconfig.ini  db_schema.sql  db_setup.py  note.txt  pyproject.toml  requirements.txt  requirements_bak.txt  restart_vivarium_service.sh  setup.py  update_vivarium.sh
archive/: database_operations.py  forecast_current_queries.py  light_controller.py  vivariumscheduler.py
assets/: weather_data_queries.py
assets/humidifier/src/: helpers.py  vesync.py  vesyncbasedevice.py  vesyncclassic300s.py
database/climate_data_ops/: astro_queries.py  base_query_strategy.py  condition_queries.py  day_queries.py  forecast_queries.py  hour_queries.py  location_queries.py  raw_data_queries.py
database/data_loader_ops/: data_loader_strategy.py  json_data_loader.py  pgdump_data_loader.py
database/data_loader_ops/json_processor_ops/: weather_json_processor.py
database/database_setup_ops/: db_setup_strategy.py  postgres_setup.py  supabase_setup.py
database/deploy_data_ops/data_loader/: data_loader_strategy.py  json_data_loader.py  pgdump_data_loader.py
database/deploy_data_ops/database_setup/: postgres_setup.py  supabase_setup.py
database/device_data_ops/: device_status_queries.py
database/sensor_data_ops/: sensor_data_queries.py  sensor_queries.py
deploy/: commands.txt
deploy/src/: deploy_orchestrator.py  orchestrator.py
deploy/src/_bak/: deploy_orchestrator.py
deploy/src/data_loader/: data_loader_strategy.py  json_data_loader.py  pgdump_data_loader.py
deploy/src/database/: data_loader_strategy.py  db_setup_strategy.py  json_data_loader.py  postgres_data_loader.py  postgres_schema.sql  postgres_sensors_devices_data.sql  postgres_setup.py  supabase_data_loader.py  supabase_schema.sql  supabase_setup.py
deploy/src/database_setup/: db_setup_strategy.py  postgres_setup.py  supabase_setup.py
manual_control/: control_commands.txt
manual_control/src/: control_device.py
mqtt/src/: mqtt_client.py
notes/: tech_debt.txt  template.py
scheduler/src/: device_scheduler_base.py  humidifier_scheduler.py  light_scheduler.py  mister_scheduler.py  scheduler_orchestrator.py  vivarium_scheduler.py  vivarium_scheduler_backup.py  vivariumscheduler.py  weather_scheduler.py
strategies/src/: base_query.py
supabase/src/: supabase_operations.py
terrarium/: terrarium_ddl.sql
terrarium/src/: terrariumstatus.py  testhumidi
terrarium/src/controllers/: Intake_controller.py  Intake_controller_bak.py  aeration_controller.py  base_device_controller.py  exhaust_controller.py  exhaust_controller_bak.py  fan_controller.py  humidifier_control.py  humidifier_controller copy.py  humidifier_controller.py  light_controller.py  light_controller_v2.py  mister_controller.py  mister_controller_v2.py  terrarium_status.py  ventilation_controller.py
terrarium/src/database/: device_queries.py  device_status_queries.py  sensor_data_queries.py  sensor_queries.py  sensor_reading_queries.py  status_queries.py
terrarium/src/database_bak/: device_queries.py  device_status_queries.py  sensor_data_queries.py  sensor_queries.py
terrarium/src/sensors/: terrarium_sensor_reader.py
tests/deploy/: test_orchestrator.py
utilities/src/: config.py  database_operations.py  db_operations.py  enums.py  logger.py  new_config.py  path_utils.py  path_utils.py.bak
utilities/src/enums/: database_enums.py  global_enums.py  weather_enums.py
vivarium.egg-info/: PKG-INFO  SOURCES.txt
weather/: README.md  climate_data_processor.py  fetch_daily_weather.py  fetch_daily_weather_del.py  load_rawfiles.py  pyproject.toml  rawclimate_dataloader.py  setup.py  weather_ddl.sql  weatherfetch_orchestrator.py
weather/notes/: DDL_Scripts.txt  config.ini.txt
weather/src/: weather_api_client.py  weather_data_retriever.py
weather/src/atmosphere/: weather_api_client.py  weather_data_retriever.py
weather/src/database/: astro_queries.py  condition_queries.py  current_weather_queries.py  database_operations.py  day_queries.py  enums.py  forecast_current_queries.py  forecast_queries.py  hour_queries.py  json_processor.py  location_queries.py  raw_data_queries.py  weather_data_queries.py
weather/src/database_del/: current_weather_queries_del.py  day_queries_del.py  hour_queries_del.py  json_processor_del.py  location_queries_del.py  raw_data_queries_del.py
weather/src/utilities/: config.py  logger.py
