[project]
name = "vivarium"
version = "0.1.0"
description = "Your Vivarium project description"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # List your external dependencies here, e.g.,
    # "psycopg2-binary",
    # "pandas",
    # "requests",
    # "pathlib" # pathlib is built-in Python 3.4+, so usually not needed
]
authors = [ # <--- Moved these here
    {name = "Adithya", email = "technoatomic@gmail.com"}
]
maintainers = [ # <--- Moved these here
    {name = "Adithya", email = "technoatomic@gmail.com"}
]
classifiers = [ # <--- Moved these here
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Home Automation",
    "Topic :: Scientific/Engineering :: Atmospheric Science"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."] # Search for packages in the current directory (vivarium/)
include = ["vivarium", "vivarium.*"] # Include the top-level 'vivarium' and all its subpackages
exclude = [".vivaenv*", "venv*", "tests*"] # Good to explicitly exclude environments and test folders