* This file is essential for modern Python packaging.  It specifies the build system and project metadata.

```toml
[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vivarium-weather"  # Your package name (should be unique on PyPI)
version = "0.1.0"  # Start with a semantic version
description = "Fetches and stores daily weather data."
readme = "README.md"  #  Link to your README
requires-python = ">=3.7"  # Minimum Python version
license = { file = "LICENSE" } # if you have a LICENSE file

authors = [
  { name = "Your Name", email = "your.email@example.com" },  # Replace
]
maintainers = [
  { name = "Your Name", email = "your.email@example.com" },  # Replace
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",  # Or your license
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/calcasmy/Vivarium.git"  # Replace
"Bug Tracker" = "https://github.com/calcasmy/Vivarium/issues" # Replace

[project.scripts]
vivarium-fetch = "src.fetch_daily_weather:main"  # Creates a console script

[tool.setuptools.packages.find]
where = ["src"]  # Tell setuptools where to find packages
```

* **`[build-system]`**: Specifies the build backend (setuptools in this case).
* **`[project]`**:  Contains project metadata:
    * `name`:  FetchWeather
    * `version`:  "1.0.0"
    * `description`, `readme`: "Fetches and stores daily weather data in postgres DB."
    * `requires-python`:  ">=3.7"
    * `license`:  { file = "LICENSE" }
    * `authors`, `maintainers`:  [{ name = "Adithya", email = "technoatomic@gmail.com" },]
    * `classifiers`:  "WeatherAPI.com, weather"
    * `[project.urls]`:  Links to your project's website, bug tracker, etc.
    * `[project.scripts]`:  "src.fetch_daily_weather:main"
* **`[tool.setuptools.packages.find]`**:  Tells setuptools where to find your Python packages.
